# x402-header-agent

./: .env.example  .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json
examples/: batch-buyer.ts  buyer-agent.ts  langchain-buyer.ts  seller-express.ts
python/: README.md  pyproject.toml
python/examples/: crewai_agent.py  custom_agent.py  langchain_agent.py  seller_fastapi.py
python/tests/: test_dual_role.py  test_safe_body.py  test_server.py
python/x402_arc_sdk/: __init__.py  client.py  dual_role.py  server.py
python/x402_arc_sdk/adapters/: crewai.py  langchain.py
src/: index.ts
src/adapters/: crewai.ts  langchain.ts  openai-tools.ts  plain-functions.ts
src/agents/: batch-orchestrator.ts  buyer-agent.ts  dual-role-agent.ts  seller-agent.ts
src/core/: buyer.ts  config.ts  dcw-wallet.ts  errors.ts  ledger.ts  policy.ts  seller.ts  types.ts
src/middleware/: express.ts
src/utils/: money.ts  url.ts
tests/: dual-role-agent.test.ts  hardening.test.ts  policy.test.ts  security.test.ts  typed-data.test.ts
