[project]
name = "x402-header-agent"
version = "0.2.4"
description = "Native Python agent adapters for Circle Gateway x402 header payments with Circle DCW signing. Native only, no raw buyer key."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0", "cryptography>=42.0.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.63.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
examples = [
  "fastapi>=0.100",
  "uvicorn>=0.20",
]
all = [
  "langchain-core>=0.3.0",
  "crewai>=0.63.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "fastapi>=0.100",
  "uvicorn>=0.20",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["x402_arc_sdk*"]
